<?xml version="1.0"?>
<package format="2">
  <name>tactile_sensor_voxblox_converter</name>
  <version>0.0.0</version>
  <description>The tactile_sensor_voxblox_converter package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>choreonoid</depend>

</package>
